<resources>
    <string name="app_name">MyAppPortfolio</string>
    <string name="my_nanodegree_apps">My Nanodegree Apps!</string>
    <string name="movies">Popular Movies</string>
    <string name="stock_hawk">Stock Hawk</string>
    <string name="build_it_bigger">Build it bigger</string>
    <string name="material">Make your app material</string>
    <string name="ubiquitous">Go Ubiquitous</string>
    <string name="capstone">Capstone</string>
</resources>
