<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="nano.samutamm.com.myappportfolio.MainActivity"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/my_nanodegree_apps"
        android:id="@+id/textView"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="5dp"/>

    <Button
        android:layout_width="@dimen/button_width"
        android:layout_height="wrap_content"
        android:text="@string/movies"
        android:tag="@string/movies"
        android:id="@+id/movies"
        android:layout_gravity="center_horizontal"
        android:background="@color/button"
        android:layout_marginBottom="5dp"
        android:onClick="buttonPressed" />

    <Button
        android:layout_width="@dimen/button_width"
        android:layout_height="wrap_content"
        android:text="@string/stock_hawk"
        android:tag="@string/stock_hawk"
        android:id="@+id/stock_hawk"
        android:layout_gravity="center_horizontal"
        android:background="@color/button"
        android:layout_marginBottom="5dp"
        android:onClick="buttonPressed" />

    <Button
        android:layout_width="@dimen/button_width"
        android:layout_height="wrap_content"
        android:text="@string/build_it_bigger"
        android:tag="@string/build_it_bigger"
        android:id="@+id/build_it_bigger"
        android:layout_gravity="center_horizontal"
        android:background="@color/button"
        android:layout_marginBottom="5dp"
        android:onClick="buttonPressed"/>

    <Button
        android:layout_width="@dimen/button_width"
        android:layout_height="wrap_content"
        android:text="@string/material"
        android:tag="@string/material"
        android:id="@+id/material"
        android:layout_gravity="center_horizontal"
        android:background="@color/button"
        android:layout_marginBottom="5dp"
        android:onClick="buttonPressed"/>

    <Button
        android:layout_width="@dimen/button_width"
        android:layout_height="wrap_content"
        android:text="@string/ubiquitous"
        android:tag="@string/ubiquitous"
        android:id="@+id/ubiquitous"
        android:layout_gravity="center_horizontal"
        android:background="@color/button"
        android:layout_marginBottom="5dp"
        android:onClick="buttonPressed"/>

    <Button
        android:layout_width="@dimen/button_width"
        android:layout_height="wrap_content"
        android:text="@string/capstone"
        android:tag="@string/capstone"
        android:id="@+id/capstone"
        android:layout_gravity="center_horizontal"
        android:background="@color/button"
        android:onClick="buttonPressed"/>

</LinearLayout>
